# Reversi_with_several_remote_players-Server_side

./: CMakeLists.txt  Command.h  CommandsManager.cpp  CommandsManager.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  main.cpp
